[package]
name = "hello-rust"
version = "0.1.0"
edition = "2024"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11_Debug",
    "Win32_Graphics_D3DCompiler",
]

[dependencies]
image = { version = "0.24", features = ["png"] }
